--- a/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/MainStoryboard_iPhone.storyboard
@@ -394,7 +394,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CCE-ly-pSA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1167" y="619"/>
+            <point key="canvasLocation" x="1155" y="-353"/>
         </scene>
         <!--Motivational List View Controller-->
         <scene sceneID="Z5V-if-HFd">
@@ -426,7 +426,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vN1-kG-Dlo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1654" y="364"/>
+            <point key="canvasLocation" x="1622" y="-556"/>
         </scene>
         <!--Averages View Controller-->
         <scene sceneID="nPn-pg-hfA">
@@ -636,7 +636,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ir5-eB-E1e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="649" y="1309"/>
+            <point key="canvasLocation" x="497" y="1057"/>
         </scene>
         <!--Contraction Edit View Controller-->
         <scene sceneID="0Ws-Pf-X9I">
@@ -658,11 +658,12 @@
                                 <rect key="frame" x="20" y="235" width="108" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Button" image="cancel-button.png">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Cancel" backgroundImage="cancel-button.png">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <state key="highlighted">
+                                <state key="selected" backgroundImage="cancel-button-selected.png"/>
+                                <state key="highlighted" backgroundImage="cancel-button-selected.png">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -673,11 +674,12 @@
                                 <rect key="frame" x="136" y="235" width="163" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Button" image="save-changes-button.png">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Save my changes" backgroundImage="save-button.png">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <state key="highlighted">
+                                <state key="selected" backgroundImage="save-button-selected.png"/>
+                                <state key="highlighted" backgroundImage="save-button-selected.png">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -719,7 +721,7 @@
                             </view>
                             <pickerView contentMode="scaleToFill" id="S21-wd-2K4">
                                 <rect key="frame" x="0.0" y="244" width="320" height="216"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <connections>
                                     <outlet property="dataSource" destination="07H-zW-wPl" id="4jw-GJ-Olc"/>
                                     <outlet property="delegate" destination="07H-zW-wPl" id="m2H-jY-VhF"/>
@@ -727,7 +729,7 @@
                             </pickerView>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" id="08q-oO-Wzu">
                                 <rect key="frame" x="0.0" y="244" width="320" height="216"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <date key="date" timeIntervalSinceReferenceDate="396509208.28776002">
                                     <!--2013-07-26 05:26:48 +0000-->
                                 </date>
@@ -757,18 +759,21 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                         <color key="backgroundColor" red="0.74901960784313726" green="0.8784313725490196" blue="0.88627450980392153" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <connections>
+                        <outlet property="cancelButton" destination="e8n-JN-WQs" id="WLz-IM-WMs"/>
                         <outlet property="durationLabel" destination="GtB-Bj-eQC" id="DPy-9M-4ec"/>
                         <outlet property="durationPickerView" destination="S21-wd-2K4" id="fIP-BW-Nh6"/>
                         <outlet property="durationTitleLabel" destination="l5m-Xe-vPj" id="Ua5-LA-dLp"/>
                         <outlet property="fadeView" destination="qpm-yD-XUo" id="LId-gv-sDl"/>
+                        <outlet property="saveButton" destination="dL8-QA-C0F" id="3Ja-GM-Qpc"/>
                         <outlet property="startTimeLabel" destination="qOp-gR-Ydr" id="aOo-TW-0aU"/>
                         <outlet property="startTimePickerView" destination="08q-oO-Wzu" id="jwG-G1-fnH"/>
                         <outlet property="startTimeTitleLabel" destination="P6z-Al-hkZ" id="8Xy-jE-d4g"/>
+                        <outlet property="titleLabel" destination="s7k-Ja-VZg" id="BA4-fr-cOG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="El5-CT-CL1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="629" y="9"/>
+            <point key="canvasLocation" x="589" y="393"/>
         </scene>
         <!--History View Controller-->
         <scene sceneID="UIm-IZ-qPZ">
@@ -1128,7 +1133,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XTe-mU-MNP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="641" y="619"/>
+            <point key="canvasLocation" x="617" y="-353"/>
         </scene>
     </scenes>
     <resources>
@@ -1137,16 +1142,136 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <image name="blue-edit.png" width="28" height="27"/>
         <image name="blue-handle.png" width="26" height="44"/>
         <image name="blue-trash.png" width="22" height="31"/>
-        <image name="cancel-button.png" width="108" height="46"/>
+        <image name="cancel-button-selected.png" width="107" height="46"/>
+        <image name="cancel-button.png" width="107" height="46"/>
         <image name="orange-circle-selected.png" width="29" height="30"/>
         <image name="orange-circle-unselected.png" width="29" height="28"/>
         <image name="orange-edit.png" width="28" height="27"/>
         <image name="orange-handle.png" width="26" height="44"/>
         <image name="orange-trash.png" width="22" height="30"/>
-        <image name="save-changes-button.png" width="163" height="46"/>
+        <image name="save-button-selected.png" width="162" height="46"/>
+        <image name="save-button.png" width="162" height="46"/>
         <image name="settings.png" width="41" height="42"/>
         <image name="start-button.png" width="61" height="81"/>
     </resources>
+    <classes>
+        <class className="BCAveragesViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCAveragesViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="averageLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="averagesScrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="fifteenMinuteDuration" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="fifteenMinuteFrequency" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="fifteenMinuteIntensity" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="fifteenMinuteNumberLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="minuteNumberScrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="oneHourDuration" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="oneHourFrequency" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="oneHourIntensity" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="pageControl" candidateClass="BCPageControl"/>
+                <relationship kind="outlet" name="sixtyMinuteNumberLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="thirtyMinuteDuration" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="thirtyMinuteFrequency" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="thirtyMinuteIntensity" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="thirtyMinuteNumberLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCBaseViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCBaseViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="backButtonPressed:"/>
+            </relationships>
+        </class>
+        <class className="BCContractionCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCContractionCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="intensityLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCContractionEditViewController" superclassName="BCBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCContractionEditViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancelPressed:"/>
+                <relationship kind="action" name="savePressed:"/>
+                <relationship kind="outlet" name="cancelButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="durationPickerView" candidateClass="UIPickerView"/>
+                <relationship kind="outlet" name="durationTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="fadeView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="saveButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="startTimeLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="startTimePickerView" candidateClass="UIDatePicker"/>
+                <relationship kind="outlet" name="startTimeTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCFrequencyCell" superclassName="UITableViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCFrequencyCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="frequencyLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCHistoryViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCHistoryViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="deleteSelectedContraction:"/>
+                <relationship kind="action" name="selectedContractionIntensityPressed:" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="contractionHistoryLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="contractionIntensityContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="contractionSlideOut" candidateClass="UIView"/>
+                <relationship kind="outlet" name="contractionTableView" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="durationHeaderLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="frequencyHeaderLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="frequencyTableView" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="headerContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="intensityHeaderLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="selectedContractionHandle" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+        <class className="BCMotivationalListViewController" superclassName="BCBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCMotivationalListViewController.h"/>
+        </class>
+        <class className="BCPageControl" superclassName="UIPageControl">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCPageControl.h"/>
+        </class>
+        <class className="BCRootViewController" superclassName="BCBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCRootViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="deleteLastContraction:"/>
+                <relationship kind="action" name="lastContractionIntensityPressed:" candidateClass="UIButton"/>
+                <relationship kind="action" name="startStopContraction:"/>
+                <relationship kind="outlet" name="averagesContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="durationLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="durationTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="frequencyLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="frequencyTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="historyContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="inspirationalLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="intensityLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="intensityTitleLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="lastContractionContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="lastContractionHandle" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="lastContractionIntensityContainerView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="lastContractionLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="lastContractionSlideOut" candidateClass="UIView"/>
+                <relationship kind="outlet" name="nextContractionEstimateLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="settingsButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="startStopButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="timerBackgroundView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="timerLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="BCSettingsViewController" superclassName="BCBaseViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCSettingsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="clearContractions:"/>
+                <relationship kind="action" name="displayOnChanged:" candidateClass="UISwitch"/>
+                <relationship kind="action" name="doneButtonPressed:"/>
+                <relationship kind="outlet" name="displayOnSwitch" candidateClass="UISwitch"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
