--- a/BirthCoach/Storyboards/Base.lproj/SettingsStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/SettingsStoryboard_iPhone.storyboard
@@ -20,7 +20,7 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="5eq-An-xBd">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="5eq-An-xBd" customClass="BCStretchableButton">
                                 <rect key="frame" x="245" y="5" width="55" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
@@ -105,6 +105,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="WfA-jf-jqC"/>
                     <connections>
+                        <outlet property="settingsTableView" destination="70f-MD-oPD" id="fgQ-PN-tel"/>
                         <outlet property="titleLabel" destination="xdJ-gM-LJc" id="BlK-fG-hGf"/>
                     </connections>
                 </viewController>
@@ -136,35 +137,6 @@
         <image name="save-button.png" width="162" height="46"/>
         <image name="settings-disclosure.png" width="20" height="34"/>
     </resources>
-    <classes>
-        <class className="BCBaseViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCBaseViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="backButtonPressed:"/>
-            </relationships>
-        </class>
-        <class className="BCSettingsOnOffCell" superclassName="BCSettingsTitleCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCSettingsOnOffCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="onOffSwitch" candidateClass="UISwitch"/>
-            </relationships>
-        </class>
-        <class className="BCSettingsTitleCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCSettingsTitleCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="disclosureImageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="BCSettingsViewController" superclassName="BCBaseViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/BCSettingsViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="clearContractions:"/>
-                <relationship kind="action" name="doneButtonPressed:"/>
-                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
