--- a/BirthCoach/Storyboards/Base.lproj/SettingsStoryboard_iPhone.storyboard
+++ b/BirthCoach/Storyboards/Base.lproj/SettingsStoryboard_iPhone.storyboard
@@ -9,7 +9,7 @@
             <objects>
                 <viewController id="0kC-2K-IS1" customClass="BCSettingsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pW1-D3-1aV">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Settings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xdJ-gM-LJc">
@@ -118,11 +118,11 @@
             <objects>
                 <viewController storyboardIdentifier="MotivationList" id="IQD-OI-thc" customClass="BCMotivationalListViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3mr-aR-KjH">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="62" sectionHeaderHeight="22" sectionFooterHeight="22" id="r0Y-3z-f6s">
-                                <rect key="frame" x="0.0" y="40" width="320" height="508"/>
+                                <rect key="frame" x="0.0" y="40" width="320" height="420"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="0.97647058819999999" green="0.90196078430000004" blue="0.83137254900000002" alpha="1" colorSpace="deviceRGB"/>
                                 <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -157,7 +157,7 @@
                                             <outlet property="disclosureImageView" destination="iNY-aS-RX8" id="3fw-gh-UT3"/>
                                             <outlet property="lowerBorder" destination="Re1-dx-GJJ" id="GlO-9P-lLV"/>
                                             <outlet property="titleLabel" destination="EVK-QT-Xuf" id="kY2-2C-bAi"/>
-                                            <segue destination="mUe-HP-EkY" kind="push" id="A9n-YL-xE2"/>
+                                            <segue destination="mUe-HP-EkY" kind="push" identifier="CellPush" id="A9n-YL-xE2"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -221,7 +221,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="doneButtonPressed:" destination="0kC-2K-IS1" eventType="touchUpInside" id="FgO-Uf-i5i"/>
+                                    <segue destination="mUe-HP-EkY" kind="push" identifier="AddPush" id="PUx-vM-4Kl"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -241,7 +241,7 @@
             <objects>
                 <viewController id="mUe-HP-EkY" customClass="BCMotivationalQuoteEditViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BES-De-hek">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Motivational" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Cfe-15-ONu">
@@ -271,7 +271,7 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="jKG-Ue-600">
-                                <rect key="frame" x="20" y="50" width="280" height="483"/>
+                                <rect key="frame" x="20" y="53" width="280" height="182"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
@@ -324,6 +324,8 @@
         <class className="BCMotivationalListViewController" superclassName="BCSettingsBaseViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BCMotivationalListViewController.h"/>
             <relationships>
+                <relationship kind="action" name="editPressed:"/>
+                <relationship kind="outlet" name="editButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="quoteTableView" candidateClass="UITableView"/>
             </relationships>
         </class>
@@ -366,6 +368,9 @@
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="PUx-vM-4Kl"/>
+    </inferredMetricsTieBreakers>
 </document>
